Fix buttons highlighting on click on mobile devices

--- a/src/index.scss
+++ b/src/index.scss
@@ -22,4 +22,5 @@ body,
 
 #root {
   justify-content: center;
+  -webkit-tap-highlight-color: transparent;
 }
